# rust-basic-microservice

./: Cargo.toml  README.md  docker-compose.yaml
docker/: Dockerfile  Dockerfile-db
src/: main.rs  models.rs
