[package]
name = "microservice"
version = "0.1.0"
edition = "2021"
author = ["alex leongxinnan@outlook.my"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
url = "2.4.1"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
diesel = { version = "2.1.0", features = ["postgres"] }
maud = { git = "https://github.com/lfairy/maud" }
syn = "0.12.7"